Bug 259656 - dolphin deletes two files instead of one file in detailed view
Summary: dolphin deletes two files instead of one file in detailed view
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-12 22:21 UTC by Dirk Sarpe
Modified: 2010-12-15 18:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dirk Sarpe 2010-12-12 22:21:12 UTC
Version:           unspecified (using KDE 4.5.4) 
OS:                Linux

Dolphin deletes an additional file instead of only the marked file. This happens only in detailed view if the confirmation dialog is disabled, deletion is issued via shift+del and shif+del is not released immediately.

Reproducible: Always

Steps to Reproduce:
First disable the confirmation dialog at Settings -> Configure Dolphin -> General -> Delete files or folders.

Change into a folder with files not dear to you or touch some into life. :)

Switch to Details view.

Mark a file, press shift+del and keep it pressed.

Actual Results:  
The marked file and a file next to it is deleted. Normally it is the file on top, but if you delete the file at the top, the file below is hit.

Expected Results:  
Only the marked file is deleted. 

OS: Linux (x86_64) release 2.6.35-23-generic
Compiler: cc

This happens also in Konqueror and was confirmed by somebody running trunk. I would say it is a major bug, since it can cause unexpected data loss. However you have to make move some hurdles away before it happens.
Comment 1 Peter Penz 2010-12-15 18:11:43 UTC
SVN commit 1206734 by ppenz:

Fix issue that 2 files get deleted in the details-view instead of 1 when Shift+DEL is pressed for a longer time (and the confirmation dialog has been turned off).

BUG: 259656
FIXED-IN: 4.6.0


 M  +8 -11     dolphintreeview.cpp  
 M  +1 -1      dolphintreeview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1206734