Fix issue that 2 files get deleted in the details-view instead of 1 when Shift+DEL is pressed for a longer time (and the confirmation dialog has been turned off).

BUG: 259656
FIXED-IN: 4.6.0

svn path=/trunk/KDE/kdebase/apps/; revision=1206734